--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -3237,7 +3237,13 @@ justify-content: center;
   right: 0;
   bottom: 50%;
 }
-
+.swiper-slide__display{
+  display: flex;
+  justify-content: center;
+}
+.swiper-pagination-bullets{
+  display: none;
+}
 /*==================================================================
   RESPONSIVE RESPONSIVE RESPONSIVE RESPONSIVE RESPONSIVE RESPONSIVE
 ==================================================================*/
