--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -3244,6 +3244,103 @@ justify-content: center;
 .swiper-pagination-bullets{
   display: none;
 }
+._1wkChM {
+  height: 21rem;
+}
+.CzsW3c {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -moz-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  height: 37.5rem;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -moz-box-orient: vertical;
+  -moz-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+._1wkChM ._38f5r7 {
+  width: 6.75rem;
+  height: 6.125rem;
+}
+
+._1wkChM .UM4yVY {
+  color: rgba(0,0,0,.4);
+  font-size: .875rem;
+  line-height: 1rem;
+  margin-top: 1.125rem;
+}
+._1Fz64J, .UM4yVY {
+  margin-top: 1.625rem;
+}
+.UM4yVY {
+  font-weight: 700;
+  font-size: 1.25rem;
+}
+._1wkChM ._1Fz64J {
+  margin-top: 1.0625rem;
+}
+._1Fz64J {
+  text-decoration: none;
+  color: rgba(0,0,0,.8);
+  display: block;
+}
+._1Fz64J, .UM4yVY {
+  margin-top: 1.625rem;
+}
+.shopee-button-solid--primary {
+  background: #ee4d2d;
+}
+.shopee-button-solid {
+  outline: none;
+  cursor: pointer;
+  border: none;
+  font-size: .875rem;
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -moz-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-transition: background-color .1s cubic-bezier(.4,0,.6,1);
+  transition: background-color .1s cubic-bezier(.4,0,.6,1);
+  position: relative;
+  background: rgba(0,0,0,.54);
+  color: #fff;
+  -webkit-transition: opacity .2s ease;
+  transition: opacity .2s ease;
+  border-radius: 2px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  box-shadow: 0 1px 1px 0 rgba(0,0,0,.09);
+}
 /*==================================================================
   RESPONSIVE RESPONSIVE RESPONSIVE RESPONSIVE RESPONSIVE RESPONSIVE
 ==================================================================*/
